Implementación base Keycloak y mejoras generales
